samples/_failures_safe/1761002552_9a17df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66fa90cb.c: In function ‘main’:
./samples/SAFE/__tmp_66fa90cb.c:168:9: error: expected declaration or statement at end of input
  168 |         default: comp_type = COMP_NONE;
      |         ^~~~~~~
./samples/SAFE/__tmp_66fa90cb.c:168:9: error: expected declaration or statement at end of input
